# OOP_indie_studio_2019

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.txt  bomberman  cmake_install.cmake  run.sh
Code/: main.cpp
Code/include/: Bomberman.hpp  Music.hpp  event.hpp  include.hpp
Code/src/Display/: Buttons.cpp  Display.cpp
Code/src/Game/: Game.cpp  Music.cpp
Code/src/Game/GameObjects/: GameObjects.cpp
Code/src/Game/GameObjects/Bomb/: Bomb.cpp
Code/src/Game/GameObjects/Bomberman/: Bomberman.cpp
Code/src/Libs/Irrlicht/: Irrlicht.cpp
assets/Bomb/bomb/: Bomb.mtl
assets/Bomb/bomb/Fireball/: fire.blend  fire.blend1  fire.mtl
assets/Bomb/bombe_up/: bombe_up.mtl
assets/Cube/Brick/: brick.blend  brick.blend1  brick.mtl
assets/Cube/Grass/: grass.blend  grass.mtl
assets/Cube/Metal/: metal.blend  metal.blend1  metal.mtl
assets/character/: bomberman_1.0.9.blend  bomberman_1.0.9.blend1  bomberman_1.0.9.mtl
assets/font/Bomberman/x10/: Bomberman.xml
assets/font/Bomberman/x11/: Bomberman.xml
assets/font/Bomberman/x12/: Bomberman.xml
assets/font/Bomberman/x13/: Bomberman.xml
assets/font/Bomberman/x14/: Bomberman.xml
assets/font/Bomberman/x15/: Bomberman.xml
assets/font/Bomberman/x16/: Bomberman.xml
assets/font/Bomberman/x17/: Bomberman.xml
assets/font/Bomberman/x18/: Bomberman.xml
assets/font/Bomberman/x8/: Bomberman.xml
assets/font/Bomberman/x9/: Bomberman.xml
assets/launch_screen/: background_alpha.xcf  button.xcf  buttonHome.xcf  buttonLaunch.xcf  buttonQuit.xcf  buttonResume.xcf  buttonSave.xcf
assets/selectPlayer_screen/: vs_face (copy).xcf  vs_face.xcf
map/: 1m  1m2  test
(+12 files in other folders)
